--- a/index.html
+++ b/index.html
@@ -9,64 +9,72 @@
 </head>
 <body>
 </body>
-    <section class="left-side">
-        <div class="sidebar">
-            <div class="sidebar-top"></div>
-            <div class="sidebar-main">
-                <div class="sidebar-element">
-                    <img src="" alt="" class="sidebar-icon">
-                    <div>Add Task</div>
-                </div>
-                <div class="sidebar-element">
-                    <img src="" alt="" class="sidebar-icon">
-                    <div>Categories</div>
-                </div>
-                <div class="sidebar-element">
-                    <img src="" alt="" class="sidebar-icon">
-                    <div>Upcoming</div>
-                </div>
-                <div class="sidebar-element">
-                    <img src="" alt="" class="sidebar-icon">
-                    <div>Sort</div>
-                </div>
-                <div class="sidebar-element">
-                    <img src="" alt="" class="sidebar-icon">
-                    <div>Completed</div>
-                </div>
-            </div>
+  <div class="screen-container">
+    <div class="left-side">
+      <div class="sidebar">
+        <div class="sidebar-top">
+          <div class="profile-container">
+            <div class="profile-image">P</div>
+            <div class="username">Panagiotis Xenos</div>
+          </div>
+          <img src="./icons/sidebar.svg" alt="hide-sidebar" class="sidebar-icon">
         </div>
-    </section>
-    <section class="right-side">
-        <header class="header">
-            <div class="header-container">
-                <h1 class="title">My To-Do List</h1>
-                <div class="view-container">
-                    <img src="" alt="" class="view-icon">
-                    <div class="view-text">View</div>
-                </div>
+        <ul class="sidebar-main">
+          <li class="sidebar-element">
+            <img src="./icons/plus-circle.svg" alt="add-task-icon" class="sidebar-icon">
+            <div>Add Task</div>
+          </li>
+          <li class="sidebar-element">
+            <img src="./icons/category.svg" alt="categories-icon" class="sidebar-icon">
+            <div>Categories</div>
+          </li>
+          <li class="sidebar-element">
+            <img src="./icons/upcoming.svg" alt="upcoming-icon" class="sidebar-icon">
+            <div>Upcoming</div>
+          </li>
+          <li class="sidebar-element">
+            <img src="./icons/sort.svg" alt="sort-icon" class="sidebar-icon">
+            <div>Sort</div>
+          </li>
+          <li class="sidebar-element">
+            <img src="./icons/trash-bin.svg" alt="competed-tasks-icon" class="sidebar-icon">
+            <div>Completed</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="right-side">
+      <header class="header">
+        <div class="header-container">
+          <h1 class="title">My To-Do List</h1>
+          <div class="view-container">
+            <img src="" alt="" class="view-icon">
+            <div class="view-text">View</div>
+          </div>
+        </div>
+      </header>
+      <main class="main-screen">
+        <div class="to-do-container">
+          <div class="to-do-left-side">
+            <input type="checkbox">
+          </div>
+          <div class="to-do-right-side">
+            <h3 class="to-do-title">To-Do Title</h3>
+            <p class="to-do-description"></p>
+            <div class="button-container">
+              <button></button>
+              <button></button>
+              <button></button>
             </div>
-        </header>
-        <main class="main-screen">
-            <div class="to-do-container">
-                <div class="to-do-left-side">
-                    <input type="checkbox">
-                </div>
-                <div class="to-do-right-side">
-                    <h3 class="to-do-title">To-Do Title</h3>
-                    <p class="to-do-description"></p>
-                    <div class="button-container">
-                        <button></button>
-                        <button></button>
-                        <button></button>
-                    </div>
-                </div>
-
-            </div>
-            <div class="add-new-to-do-container">
-                <img src="" alt="" class="">
-                <div>Add Task</div>
-            </div>
-        </main>
-    </section>
+          </div>
+        
+        </div>
+        <div class="add-new-to-do-container">
+          <img src="" alt="" class="">
+          <div>Add Task</div>
+        </div>
+      </main>
+    </div>
+  </div>
 </body>
 </html>
