--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <!--Main-->
     <main class="main-screen">
       <h2 class="page-title">Upcoming</h2>
-      <div class="to-do-container">
+
+      <!--<div class="to-do-container">
         <div class="to-do-left-side">
           <input type="checkbox">
         </div>
@@ -82,7 +83,7 @@
           </div>
         </div>
       
-      </div>
+      </div>-->
 
       <div id="new-todo-input-container" class="new-todo-input-container">
         <input type="text" name="task-name" id="task-name" placeholder="Task name">
@@ -93,7 +94,12 @@
           <input type="date" id="due-date-input" class="hover-effect">
 
           <select name="category" id="category" class="hover-effect">
-            <option value="select" class="select-category">Select category</option>
+            <option value="" class="select-category">Select category</option>
+            <option value="1" class="select-category">1</option>
+            <option value="2" class="select-category">2</option>
+            <option value="3" class="select-category">3</option>
+            <option value="4" class="select-category">4</option>
+            <option value="5" class="select-category">5</option>
           </select>
 
           <button class="reminder-button hover-effect">
