start adding functionality to edit buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <nav>
       <ul class="sidebar-main">
-        <li class="sidebar-element hover-effect">
+        <li class="sidebar-element hover-effect" id="side-bar-add-new-task">
           <img src="./icons/plus-circle.svg" alt="add-task-icon" class="sidebar-icon">
           <div>Add Task</div>
         </li>
