Fix errors in edit buttons

--- a/index.html
+++ b/index.html
@@ -63,35 +63,7 @@
         <!--Dispalay todo cards-->
       </div>
 
-      <div id="new-todo-input-container" class="new-todo-input-container">
-        <input type="text" name="task-name" id="task-name" placeholder="Task name">
-        <input type="text" name="task-descreption" id="task-descreption" placeholder="Description">
-
-        <div class="button-container">
-
-          <input type="datetime-local" id="due-date-input" class="hover-effect">
-
-          <select name="category" id="category" class="hover-effect">
-            <option value="" class="select-category">Select category</option>
-            <option value="1" class="select-category">1</option>
-            <option value="2" class="select-category">2</option>
-            <option value="3" class="select-category">3</option>
-            <option value="4" class="select-category">4</option>
-            <option value="5" class="select-category">5</option>
-          </select>
-
-          <button class="reminder-button hover-effect">
-            <img src="./icons/riminder.svg" alt="reminder-button">
-            Reminder
-          </button>
-        </div>
-
-        <div class="save-cancel-button-container">
-          <button class="cancel-button hover-effect" id="cancel-button">Cancel</button>
-          <button class="save-task-button" id="save-task-button">Add Task</button>
-        </div>
-      </div>
-
+      <!--Add new task button-->
       <div class="add-new-to-do-container" id="add-task-button">
         <img src="./icons/plus-circle.svg" alt="add-task-icon" class="sidebar-icon">
         <div>Add Task</div>
@@ -105,6 +77,8 @@
       <div class="categories-container" id="categories-container">
         <!--Categories To Be Displayed-->
       </div>
+      
+      <!--Add new Category Form to be displayed-->
       
       <div class="add-new-category" id="add-category-button">
         <img src="./icons/plus-circle.svg" alt="add-category-icon" class="sidebar-icon">
