--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <img src="./icons/sort.svg" alt="sort-icon" class="sidebar-icon">
           <div>Sort</div>
         </li>
-        <li class="sidebar-element hover-effect sort" id="completed-sidebar-button">
-          <img src="./icons/trash-bin.svg" alt="competed-tasks-icon" class="sidebar-icon sort">
-          <div class="sort">Completed</div>
+        <li class="sidebar-element hover-effect" id="completed-sidebar-button">
+          <img src="./icons/trash-bin.svg" alt="competed-tasks-icon" class="sidebar-icon">
+          <div>Completed</div>
         </li>
       </ul>
     </nav>
@@ -49,14 +49,14 @@
         <img src="./icons/sidebar.svg" alt="hide-sidebar" class="sidebar-icon">
       </button>
       <h1 class="title">My To-Do List</h1>
-      <div class="view-container hover-effect">
+      <div class="view-container">
         <img src="./icons/view-icon.svg" alt="change-view" class="view-icon">
         <div class="view-text">View</div>
       </div>
     </header>
 
     <!--Categories Screen-->
-    <main class="category-screen" id="category-screen">
+    <main class="category-screen screen" id="category-screen">
       <h2 class="page-title">Categories</h2>
 
       <div class="categories-container" id="categories-container">
@@ -72,7 +72,7 @@
     </main>
 
     <!--Upcoming Screen-->
-    <main class="main-screen" id="main-screen">
+    <main class="main-screen screen" id="main-screen">
       <h2 class="page-title">Upcoming</h2>
 
       <div class="to-do-container" id="to-do-container">
@@ -123,7 +123,7 @@
     </div>
 
     <!--Completed Todos Screen-->
-    <main class="completed-screen" id="completed-screen">
+    <main class="completed-screen screen" id="completed-screen">
       <h2 class="page-title">Completed</h2>
 
       <div class="completed-container" id="completed-container">No completed to-dos yet</div>
